--- a/case4/rnt_audio_txt.css
+++ b/case4/rnt_audio_txt.css
@@ -6,8 +6,8 @@
    Case Problem 4
 
    Roads Not Taken Audio Styles
-   Author: 
-   Date:   
+   Author: Elijah Collins
+   Date:   12/17/19
 
    Filename: rnt_audio.css
 
@@ -15,3 +15,16 @@
 
 /* Audio Styles */
 
+audio{
+   display: block;
+   box-shadow: darkgrey 8px 8px 15px;
+   margin-top: 20px;
+   margin-bottom: 20px;
+   margin-left: auto;
+   margin-right: auto;
+   width: 80%;
+   border-radius: 25px;
+}
+audio::-webkit-media-controls-panel{
+   background: rgb(128, 128, 255);
+}
